--- a/pllug/templates/partials/_header.html
+++ b/pllug/templates/partials/_header.html
@@ -11,7 +11,7 @@
         <li class="nav__link"><a href="#">Команда</a></li>
         <li class="nav__link"><a href="{% url 'home:roadmap' %}">Путівник</a></li>
         <li class="nav__link"><a href="{% url 'blog:posts' %}">Блог</a></li>
-        <li class="nav__link"><a href="#">Контакти</a></li>
+        <li class="nav__link"><a href="{% url 'home:contact' %}">Контакти</a></li>
       </nav>
     </section>
   </section>
