Added posts api

--- a/pllug/web/blog/templates/blog/posts.html
+++ b/pllug/web/blog/templates/blog/posts.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <section class="blog-wrapper">
-  <sections id="posts-root">loading</sections>
+  <sections id="posts-root" class="posts-wrapper">loading posts</sections>
 </section>
 {% endblock content %}
