--- a/pllug/frontend/stylesheets/pages/blog.css
+++ b/pllug/frontend/stylesheets/pages/blog.css
@@ -12,8 +12,16 @@
   background: #f6f6f6;
 }
 
+.blog__posts {
+  width: 70%;
+}
+
+.blog__load-more {
+  /*float: right;*/
+}
+
 .posts__item .item__header {
-  margin: 20px 10px 20px 10px;
+  margin: 30px;
 }
 
 .item__header .item__title {
@@ -21,6 +29,12 @@
 }
 
 .item__content {
-  margin: 10px 10px;
+  margin: 10px 30px;
   padding-bottom: 20px;
+}
+
+.load-more {
+  padding: 10px 50px 10px 50px;
+  border: 1px solid #ccc;
+  color: #666;
 }
