Added async scripts loader

--- a/pllug/web/blog/templates/blog/posts.html
+++ b/pllug/web/blog/templates/blog/posts.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock title %}
 
 {% block content %}
-<section class="blog-wrapper">
-  <sections id="posts-root" class="posts-wrapper">loading posts</sections>
+<section class="blog-wrapper" data-entry="blog">
+  <sections data-react-component="posts-root" class="posts-wrapper">loading posts</sections>
 </section>
 {% endblock content %}
