--- a/pllug/web/home/templates/home/roadmap.html
+++ b/pllug/web/home/templates/home/roadmap.html
@@ -75,8 +75,9 @@ Roadmap
   </section>
 </section>
 <section class="faq">
-  <section class="page-wrapper">
+  <section class="page-wrapper" data-entry="faq">
     <h3>Часті питання</h3>
+    <section data-react-component="faq-list"></section>
   </section>
 </section>
 {% endblock content %}
