--- a/pllug/templates/layouts/base.html
+++ b/pllug/templates/layouts/base.html
@@ -14,6 +14,9 @@
   {% block content %}
   {% endblock content %}
   {% include 'partials/_footer.html' %}
+  <script type="text/javascript">
+    window.STATIC_URL = "{{ STATIC_URL }}";
+  </script>
   <script src="{% static 'js/core.bundle.js' %}" charset="utf-8"></script>
 </body>
 </html>
