--- a/pllug/templates/partials/_footer.html
+++ b/pllug/templates/partials/_footer.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<footer class="footer">
-  <section class="page-wrapper">
-    <section class="footer__item">info@pllug.org.ua</section>
-    <section class="footer__item">
+<footer class="main-footer">
+  <section class="container main-footer__footer-container">
+    <section class="main-footer__item">info@pllug.org.ua</section>
+    <section class="main-footer__item">
       <img src="{% static 'images/footer-facebook.png' %}" alt="">
     </section>
-    <section class="footer__item">&copy; 2016, Pllug Community</section>
+    <section class="main-footer__item">&copy; 2016, Pllug Community</section>
   </section>
 </footer>
