--- a/pllug/frontend/stylesheets/common.css
+++ b/pllug/frontend/stylesheets/common.css
@@ -1,74 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+/**
+  Imports section
+*/
 
-.page-wrapper {
-  width: 940px;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-.header {
-  padding-top: 3em;
-  height: 300px;
-  background: url(/static/images/header-background.png) no-repeat scroll;
-  background-size: 100% 500px;
-  background-position: center;
-}
-
-.header__top {
-  background: #fff;
-  display: flex;
-  justify-content: center;
-}
-
-.header__wrapper {
-  width: 940px;
-  display: flex;
-  justify-content: space-between;
-}
-
-
-.header__logo {
-  padding: 10px 0 10px 0;
-  text-decoration: none;
-}
-
-.header__nav {
-  padding-top: 40px;
-  display: flex;
-  justify-content: space-around;
-}
-
-.nav__link {
-  list-style: none;
-  padding: 0 10px 0 10px;
-}
-
-.nav__link a {
-  text-decoration: none;
-  color: #666;
-  text-transform: uppercase;
-}
-
-.footer {
-  height: 50px;
-  padding: 40px 0 40px 0;
-  background: #26312a;
-  color: #cadf6b;
-  display: flex;
-  justify-content: center;
-}
-
-.footer__item {
-  width: 20%;
-  text-align: center;
-  vertical-align: middle;
-}
-
+@import "./layout.css";
+@import "./grid.css";
 @import "./pages/index.css";
-@import "./pages/roadmap.css";
 @import "./pages/blog.css";
+@import "./pages/roadmap.css";
+
+a {
+  text-decoration: none;
+}
