--- a/pllug/templates/layouts/base.html
+++ b/pllug/templates/layouts/base.html
@@ -11,8 +11,9 @@
 </head>
 <body>
   {% include 'partials/_header.html' %}
-  {% block content %}
-  {% endblock content %}
+  <section class="main-content">
+    {% block content %}{% endblock content %}
+  </section>
   {% include 'partials/_footer.html' %}
   <script type="text/javascript">
     window.STATIC_URL = "{{ STATIC_URL }}";
