--- a/pllug/templates/partials/_header.html
+++ b/pllug/templates/partials/_header.html
@@ -1,18 +1,18 @@
 {% load static %}
 
-<header class="header">
-  <section class="header__top">
-    <section class="header__wrapper">
-      <a href="{% url 'home:index' %}" class="header__logo">
+<header class="main-header">
+  <section class="container main-header__header-container">
+    <a href="{% url 'home:index' %}" class="header__logo">
+      <h1>
         <img src="{% static 'images/logo-img.png' %}" alt="" />
         <img src="{% static 'images/logo-title.png' %}" alt="">
-      </a>
-      <nav class="nav header__nav">
-        <li class="nav__link"><a href="#">Команда</a></li>
-        <li class="nav__link"><a href="{% url 'home:roadmap' %}">Путівник</a></li>
-        <li class="nav__link"><a href="{% url 'blog:posts' %}">Блог</a></li>
-        <li class="nav__link"><a href="{% url 'home:contact' %}">Контакти</a></li>
-      </nav>
-    </section>
+      </h1>
+    </a>
+    <nav class="nav main-header__nav">
+      <li class="nav__link"><a href="#">Команда</a></li>
+      <li class="nav__link"><a href="{% url 'home:roadmap' %}">Путівник</a></li>
+      <li class="nav__link"><a href="{% url 'blog:posts' %}">Блог</a></li>
+      <li class="nav__link"><a href="{% url 'home:contact' %}">Контакти</a></li>
+    </nav>
   </section>
 </header>
