--- a/pllug/templates/partials/_header.html
+++ b/pllug/templates/partials/_header.html
@@ -9,10 +9,11 @@
       </h1>
     </a>
     <nav class="nav main-header__nav">
-      <li class="nav__link"><a href="#">Команда</a></li>
+      <!-- <li class="nav__link"><a href="#">Команда</a></li> -->
       <li class="nav__link"><a href="{% url 'home:roadmap' %}">Путівник</a></li>
       <li class="nav__link"><a href="{% url 'blog:posts' %}">Блог</a></li>
       <li class="nav__link"><a href="{% url 'home:contact' %}">Контакти</a></li>
     </nav>
   </section>
+  <section class="main-header__bg"></section>
 </header>
