--- a/pllug/web/home/templates/home/roadmap.html
+++ b/pllug/web/home/templates/home/roadmap.html
@@ -70,9 +70,9 @@ Roadmap
     </section>
   </section>
 </section>
-<section class="faq">
+<section class="qa">
   <section class="container" data-entry="faq">
-    <h3 class="faq__title">Часті питання</h3>
+    <h3 class="qa__title">Часті питання</h3>
     <section data-react-component="faq-list"></section>
   </section>
 </section>
