Added faq items styling

--- a/pllug/frontend/stylesheets/pages/roadmap.css
+++ b/pllug/frontend/stylesheets/pages/roadmap.css
@@ -50,7 +50,10 @@
 }
 
 .qa-item {
-  padding: 5px 10px;
+  padding: 10px 15px;
+  border-left: 2px solid #fff;
+  background: #f6f6f6;
+  margin-bottom: 15px;
 }
 
 .qa-item--active {
