Added question form

--- a/pllug/web/home/templates/home/roadmap.html
+++ b/pllug/web/home/templates/home/roadmap.html
@@ -72,8 +72,20 @@ Roadmap
 </section>
 <section class="qa">
   <section class="container" data-entry="faq">
-    <h3 class="qa__title">Часті питання</h3>
+    <h3 class="qa__title">
+      <img src="{% static 'images/qa-title.png' %}" alt="">
+      Часті питання
+    </h3>
     <section data-react-component="faq-list"></section>
+  </section>
+</section>
+<section class="question-form-section">
+  <section class="container" data-entry="question-form">
+    <h3 class="question-form__title">
+      <img src="{% static 'images/question.png' %}" alt="">
+      Запитати
+    </h3>
+    <section data-react-component="question-form"></section>
   </section>
 </section>
 {% endblock content %}
