--- a/pllug/frontend/stylesheets/pages/roadmap.css
+++ b/pllug/frontend/stylesheets/pages/roadmap.css
@@ -5,11 +5,23 @@
   align-items: center;
 }
 
-.shedule__title, .qa__title {
+.shedule__title, .qa__title, .question-form__title {
   padding-bottom: 20px;
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
+  vertical-align: middle;
+  width: auto;
+}
+
+.qa__title img {
+  margin-bottom: -16px;
+  margin-right: 6px;
+}
+
+.question-form__title img {
+  margin-bottom: -13px;
+  margin-right: 6px;
 }
 
 .cources {
@@ -57,7 +69,7 @@
 }
 
 .qa-item--active {
-  border-left: 2px solid red;
+  border-left: 2px solid #D0DAC2;
 }
 
 .qa-item .qa-item__question {
@@ -68,4 +80,31 @@
 .qa-item .qa-item__answer {
   padding: 0;
   margin: 5px 0 5px 15px;
+}
+
+.question-form-section {
+  background: #f6f6f6;
+  padding: 1px 0 50px 0;
+}
+
+.question-form {
+  text-align: center;
+}
+
+.question-form .question-form__input {
+  line-height: 30px;
+  width: 280px;
+  font-size: 1.2rem;
+  outline: none;
+}
+
+.question-form .question-form__button {
+  line-height: 32px;
+  cursor: pointer;
+  padding: 0 10px;
+  margin: -1px 0 0 5px;
+  border: none;
+  font-size: 1.2rem;
+  background: #26312A;
+  color: #CCE25E;
 }
