--- a/pllug/templates/layouts/base.html
+++ b/pllug/templates/layouts/base.html
@@ -4,10 +4,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PLLUG {% block title %}{% endblock title %}</title>
-  <link rel="stylesheet" href="{% static 'css/core.bundle.css' %}" />
+  <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+  <link rel="stylesheet" href="{% static 'css/core.bundle.css' %}" >
 </head>
 <body>
   {% include 'partials/_header.html' %}
