Added partner model

--- a/pllug/web/home/templates/home/index.html
+++ b/pllug/web/home/templates/home/index.html
@@ -26,7 +26,9 @@
 </section>
 <section class="index-section index-team">
   <section class="container row row-center">
-    <section class="index-team__item"><img src="{% static 'images/electronics.png' %}" alt=""></section>
+    <section class="index-team__item">
+      <a href="#"><img src="{% static 'images/electronics.png' %}" alt=""></a>
+    </section>
     <section class="index-team__item"><img src="{% static 'images/lug.png' %}" alt=""></section>
     <section class="index-team__item"><img src="{% static 'images/vakoms.png' %}" alt=""></section>
     <section class="index-team__item"><img src="{% static 'images/indeema.png' %}" alt=""></section>
